[build-system]
requires = ["setuptools>=65.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elb-doctor"
version = "1.0"
description = "A tool for troubleshooting AWS ELB problems"
readme = "README.md"
authors = [{ name = "David Dai", email = "wdai9162@gmail.com" },{ name = "Adam Fitzgerald", email = "adam@networknoob.net" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["aws", "elb", "alb", "health", "troubleshoot"]
dependencies = [
    "boto3 == 1.28.53",
    "botocore == 1.31.53 ",
    "PyInquirer == 1.0.3",
]
requires-python = ">=3.7.0"

[project.urls]
Homepage = "https://github.com/aws/elb-doctor"

[project.scripts]
elbdoc = "elb_doctor.__main__:main"